--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -12,6 +12,7 @@
     {% endif %}
     <div class="login-form">
         <form action="{% url 'login' %}" method='POST'>
+            <p><a href="{% url "password_reset" %}">Forgotten your password?</a></p>
             {{ form.as_p }}
             {% csrf_token %}
             <input type="hidden" name="next" value="{{ next }}">
