--- a/account/templates/registration/password_reset_confirm.html
+++ b/account/templates/registration/password_reset_confirm.html
@@ -2,9 +2,9 @@
 {% block title %} Reset your password {% endblock %}
 {% block content %}
     <h1>Reset your password</h1>
-    {% if validlind %}
+    {% if validlink %}
         <p>Please enter your new password twice:</p>
-        <form methond="POST">
+        <form method="POST">
             {{ form.as_p }}
             {% csrf_token %}
             <p><input type="submit" value="Change my password"></p>
