--- a/account/templates/registration/password_reset_email.html
+++ b/account/templates/registration/password_reset_email.html
@@ -1,3 +1,4 @@
 Email {{ email }} asked to reset their password. To reset it follow the link below:
-{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+{{ protocol }}://{{ domain }}{% url "password_reset_confirm" uidb64=uid token=token %}
 your username is {{ user.get_usernam }}
+
