added registration functionality and  FarmerProfile model and edit_profile view

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -15,12 +15,10 @@
                 <li {% if section == "dashboard" %} class="selected" {% endif %}>
                     <a href="{% url "dashboard" %}">My dashboard</a>
                 </li>
-                <li {% if section == "images" %}class="selected"{% endif %}>
-                    <a href="#">Images</a>
+                <li {% if section == "edit_profile" %}class="selected"{% endif %}>
+                    <a href="{% url "edit" %}">Edit Profile</a>
                 </li>
-                <li {% if section == "people" %}class="selected"{% endif %}>
-                    <a href="#">People</a>
-                </li>
+                
             </ul>
         {% endif %}
         <span class="user">
