--- a/account/templates/account/edit_profile.html
+++ b/account/templates/account/edit_profile.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% block title %}Edit your account{% endblock%}
 {%block content%}
     <h1>Edit your account</h1>
