--- a/account/templates/registration/logged_out.html
+++ b/account/templates/registration/logged_out.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% block title %}Logged out{% endblock title %}
 {% block content %}
     <h1>Logged out</h1>
