--- a/account/templates/registration/password_change_form.html
+++ b/account/templates/registration/password_change_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% block title%} Change your password {% endblock %}
 {% block content %}
     <h1>Change your password</h1>
