--- a/account/templates/registration/password_reset_done.html
+++ b/account/templates/registration/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% block title %} Reset your password {% endblock %}
 {% block content %}
     <h1>Reset your password</h1>
