--- a/account/templates/registration/password_reset_form.html
+++ b/account/templates/registration/password_reset_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% block title %} Reset your password {% endblock %}
 {% block content %}
     <h1>Forgotten your password?</h1>
