--- a/home/templates/home/farm_profile_list.html
+++ b/home/templates/home/farm_profile_list.html
@@ -1,13 +1,25 @@
 {% extends 'home/base.html' %}
 
+{% block title%} Home {% endblock %}
+
+{% block content %}
     {% for profile in farmer_profile %}
         {% if profile.farmer.is_active %}
-           <div class="card">
-                <img src="../media/{{ profile.farm_photo.name}}" alt="" style="width:200px">
-                <div class="container">
-                    <h4><b>{{ profile.farmer.first_name }}</b></h4>
-                    <p>{{ profile.farm_description}}</p>
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                    <img src="" class="bd-placeholder-img" width="100%" height="250" />
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">It's a broader card with text below as a natural lead-in to extra content. This content is a little longer.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
                 </div>
-           </div>
+            </div>
         {% endif %}
     {% endfor %}
+{% endblock %}
+    
