added navbar to farm_profile_list.html and change active based on url

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends 'base.html' %}
+{% comment %} {% extends 'account/base.html' %}
 {% block title%} Log-in {% endblock %}
 {% block content %}
     <h1>Log-in</h1>
