--- a/home/templates/home/farm_profile_list.html
+++ b/home/templates/home/farm_profile_list.html
@@ -3,23 +3,29 @@
 {% block title%} Home {% endblock %}
 
 {% block content %}
-    {% for profile in farmer_profile %}
-        {% if profile.farmer.is_active %}
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                    <img src="" class="bd-placeholder-img" width="100%" height="250" />
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">It's a broader card with text below as a natural lead-in to extra content. This content is a little longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div class="container">
+        {% for profile in farmer_profile %}
+            {% if profile.farmer.is_active %}
+                <div class="card mb-3" style="max-width: 800px;">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                        <img src="./media/{{ profile.farm_photo.name }}" class="bd-placeholder-img" width="100%" height="250" />
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ profile.farm_name}}</h5>
+                                <p class="card-text">{{ profile.farm_description|truncatechars:400}}</p>
+                                <p class="card-text"><small class="text-muted">
+                                {{ profile.city|capfirst }}, {{ profile.state|capfirst }}</small></p>
+                                 <a href="#" class="btn btn-secondary">View Farm</a>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
-            </div>
-        {% endif %}
-    {% endfor %}
+            {% endif %}
+        {% endfor %}
+    </div>
+    
 {% endblock %}
     
