minor change to styling base.html

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!-- Grey with black text -->
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <ul class="navbar-nav">
     <li {% if nbar == "farm_list" %} class="nav-item active" {% endif %}>
       <a class="nav-link" href="{% url "farmer_list" %}">Active</a>
