--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -11,24 +11,20 @@
     <title>{% block title%}{% endblock %}</title>
 </head>
 <body>
-<!-- Grey with black text -->
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <ul class="navbar-nav">
-    <li {% if nbar == "farm_list" %} class="nav-item active" {% endif %}>
-      <a class="nav-link" href="{% url "farmer_list" %}">Active</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#">Disabled</a>
-    </li>
-  </ul>
-</nav>
-
+ <div id="header">
+        <span class="logo">Online Farmers Market</span>
+            <ul class="menu">
+                <li{%if section == "home"%} class="selected" {% endif %}>
+                    <a href="{% url "home" %}">Home</a>
+                </li>
+                <li {% if section == "farm_list" %} class="selected" {% endif %}>
+                    <a href="{% url "farmer_list" %}">Farms</a>
+                </li>
+                
+               
+            </ul>
+       
+</div>
 
     <div id="content">
         {% block content %}
