--- a/home/templates/home/farm_profile_list.html
+++ b/home/templates/home/farm_profile_list.html
@@ -9,7 +9,7 @@
                 <div class="card mb-3" style="max-width: 800px;">
                     <div class="row no-gutters">
                         <div class="col-md-4">
-                        <img src="./media/{{ profile.farm_photo.name }}" class="bd-placeholder-img" width="100%" height="250" />
+                        <img src="../media/{{ profile.farm_photo.name }}" class="bd-placeholder-img" width="100%" height="250" />
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
