fixed media path in farm_profile template and started FarmDetail class

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -15,12 +15,11 @@
         <span class="logo">Online Farmers Market</span>
             <ul class="menu">
                 <li{%if section == "home"%} class="selected" {% endif %}>
-                    <a href="{% url "home" %}">Home</a>
+                    <a href="{% url "index" %}">Home</a>
                 </li>
                 <li {% if section == "farm_list" %} class="selected" {% endif %}>
                     <a href="{% url "farmer_list" %}">Farms</a>
                 </li>
-                
                
             </ul>
        
