--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,4 +1,4 @@
-{% extends 'accoung/base.html' %}
+{% extends 'account/base.html' %}
 {% block title %}Create an account{% endblock %}
 {% block content %}
     <h1>Create a farm account</h1>
