--- a/home/templates/home/farmer_detail.html
+++ b/home/templates/home/farmer_detail.html
@@ -9,6 +9,10 @@
         <h3>Products offered</h3>
         <p>{{ farmer.farm_products }}</p>
     </div>
+    <div>
+        <h3>Contact Info</h3>
+        <p>{{ farmer.email }}</p>
+    </div>
    
 
 {% endblock %}
