--- a/home/templates/home/farmer_detail.html
+++ b/home/templates/home/farmer_detail.html
@@ -11,7 +11,7 @@
     </div>
     <div>
         <h3>Contact Info</h3>
-        <p>{{ farmer.email }}</p>
+        <p>{{ farmer.user.email }}</p>
     </div>
    
 
