--- a/account/templates/account/register_done.html
+++ b/account/templates/account/register_done.html
@@ -1,6 +1,6 @@
 {% extends 'account/base.html' %}
 {% block title %} Welcome {% endblock %}
 {% block content %}
-    <h1>Welcome {{ new_user.first_name }}</h1>
+    <h1>{{ new_user.first_name }} you are registered</h1>
     <p>Your account has been successfully created. Now you can <a href="{% url "login" %}">log in</a></p>
 {% endblock %}
