--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,1 +1,11 @@
 {% extends 'account/base.html' %}
+{% load home_tags %}
+
+{% block title %} Home {% endblock %}
+
+{% block content %}
+    <h1>Farm to table</h1>
+    <h4>Farm fresh food is right next door! Access local farmers in you area to get quality food at great prices,</h4>
+    <h3>Most recent farms</h3>
+    {% show_recent_farms 3 %}
+{% endblock %}
