--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,11 +1,20 @@
 {% extends 'account/base.html' %}
 {% block title %}Create an account{% endblock %}
 {% block content %}
-    <h1>Create a farm account</h1>
+    
+    <div class="offset-3 col-md-6">
+    <h1 class="my-5">Create a farm account</h1>
     <p>Please, sign up using the following form:</p>
-    <form method="POST">
-        {{ user_form.as_p }}
-        {% csrf_token %}
-        <p><input type="submit" value="Create my account"></p>
-    </form>
+        <form method="POST">
+            <div class="form-group">
+                {% for field in user_form %}
+                    <label for="">{{field.label_tag}}</label>
+                    {{field}}
+                {% endfor %}
+            </div>
+            {% csrf_token %}
+            <p><input type="submit" value="Create my account"></p>
+        </form>
+    </div>
+    
 {% endblock %}
