--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-   
+   <link rel="stylesheet" href="{% static "base.css" %}">
     <title>{% block title%}{% endblock %}</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
     </button>
         <div class="collapse navbar-collapse" id="navMenu">
         {% if request.user.is_authenticated %}
-            <ul class="navbar-nav ml-5">
+            <ul class="navbar-nav ml-1">
                 <li class="nav-item {% if section == 'home' %} active {% endif %}">
                 <a href="{% url "index" %}" class="nav-link">Home</a>
                 </li>
