--- a/account/templates/account/edit_profile.html
+++ b/account/templates/account/edit_profile.html
@@ -2,30 +2,31 @@
 {% block title %}Edit your account{% endblock%}
 {%block content%}
 
-<div class="offset-3 col-md-6">
-    <h1>Edit your account</h1>
+<div class="container">
+    <h1 class="my-5">Edit your account</h1>
     <p>You can edit your account using the following form:</p>
     <form method="POST" enctype="multipart/form-data">
         <fieldset>
             <legend>Personal info</legend>
-                <div class="form-group">
+                <div class="form-group md-w-75">
                     {% for field in user_form %}
-                        <label for="">{{field.label_tag}}</label>
-                        {{field}}
+                        <label for="">{{ field.label_tag }}</label>
+                        {{ field }}
                     {% endfor %}
                 </div>
                   
         </fieldset> 
-        <fieldset>
+        <fieldset >
             <legend>Farm info</legend>
                  <div class="form-group">
                     {% for field in farmer_profile_form %}
-                        <label for="">{{field.label_tag}}</label>
-                        {{field}}
+                     <label>{{ field.label_tag }}</label>
+                        {{ field }}
                     {% endfor %}
                 {% csrf_token %}
         </fieldset>
-        <p><input type="submit" value="Save changes"></p>
+        <button class="btn btn-primary mb-4">Save Changes</button>
+        
     </form>
 </div>
    
