--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,11 +1,29 @@
-{% comment %} {% extends 'account/base.html' %}
+{% extends 'account/base.html' %}
 {% block title%} Log-in {% endblock %}
 {% block content %}
-    <h1>Log-in</h1>
-    <p>Please, use the following form to log-in:</p>
-    <form method="post">
-        {{ form.as_p }}
-        {% csrf_token %}
-        <p><input type="submit" value="Log-in"></p>
-    </form>
-{% endblock %} {% endcomment %}
+ 
+    <div class="container">
+        <h1 class="my-5">Log-in </h1>
+            {% if form.errors %}
+                <p>
+                    Your username and password didn't match.
+                </p>
+            {% else %}
+                <p>Please, use the following form to log-in: </p>
+            {% endif %}
+            <form action="{% url 'login' %}" method='POST' class="w-50">
+                <p><a href="{% url "password_reset" %}">Forgotten your password?</a></p>
+                <div class="form-group">
+                    <label for="username">Username</label>
+                     {{ form.username }}
+                </div>
+                <div class="form-group">
+                      <label for="password">Password</label>
+                     {{ form.password }}
+                </div>
+                {% csrf_token %}
+                <input type="hidden" name="next" value="{{ next }}">
+                <button class="btn btn-secondary w-25">Log-in</button>
+            </form>
+    </div>
+{% endblock %}
