--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    <nav class="navbar navbar-dark bg-dark navbar-expand-md">
-    <a href="#" class="navbar-brand">Online Farmers Market</a>
+    <a href="{% url 'index'%}" class="navbar-brand">Online Farmers Market</a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
