--- a/account/templates/registration/password_reset_form.html
+++ b/account/templates/registration/password_reset_form.html
@@ -1,11 +1,16 @@
 {% extends 'account/base.html' %}
 {% block title %} Reset your password {% endblock %}
 {% block content %}
-    <h1>Forgotten your password?</h1>
-    <p>Enter your e-mail address to obtain a new password</p>
-    <form method='POST'>
-        {{ form.as_p }}
-        <p><input type="submit" value="Send e-mail"></p>
-        {% csrf_token %}
-    </form>
+    <div class="container">
+        <h1 class="my-5">Forgotten your password?</h1>
+        <p>Enter your e-mail address to obtain a new password</p>
+        <form method='POST'>
+            <div class="form-group">
+            {{ form.as_p }}
+            </div>
+            <button class="btn btn-secondary">Send e-mail</button>
+            {% csrf_token %}
+        </form>
+    </div>
+   
 {% endblock %}
