--- a/home/templates/home/farm_profile_list.html
+++ b/home/templates/home/farm_profile_list.html
@@ -10,26 +10,26 @@
     </div>
 
     <div class="container">
-    <h2>Farm List:</h2>
-        {% for profile in farmer_profile %}
-                <div class="card mb-3" style="max-width: 800px;">
-                    <div class="row no-gutters">
-                        <div class="col-md-4">
+        <h2>Farm List:</h2>
+        {% for profile in farms %}
+            <div class="card mb-3" style="max-width: 800px;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
                         <img src="../media/{{ profile.farm_photo.name }}" class="bd-placeholder-img" width="100%" height="250" />
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">{{ profile.farm_name}}</h5>
-                                <p class="card-text">{{ profile.farm_description|truncatechars:125}}</p>
-                                <p class="card-text"><small class="text-muted">
-                                {{ profile.city|capfirst }}, {{ profile.state|capfirst }}</small></p>
-                                 <a href="{{ profile.get_absolute_url }}" class="btn btn-secondary">View Farm</a>
-                            </div>
-                            
-                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ profile.farm_name}}</h5>
+                            <p class="card-text">{{ profile.farm_description|truncatechars:125}}</p>
+                            <p class="card-text"><small class="text-muted">
+                            {{ profile.city|capfirst }}, {{ profile.state|capfirst }}</small></p>
+                            <a href="{{ profile.get_absolute_url }}" class="btn btn-secondary">View Farm</a>
+                        </div> 
                     </div>
                 </div>
+            </div>
         {% endfor %}
+        {% include "home/pagination.html" with page=farms %}
     </div>
     
 {% endblock %}
