fixed link on index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,7 +10,7 @@
         <hr class="my-4">
         <p>Browse a list of local farms in your area.</p>
         <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Browse Farms</a>
+            <a class="btn btn-primary btn-lg" href="{% url 'farm_list' %}" role="button">Browse Farms</a>
         </p>
     </div>
 
